lesson3-k8s-Security&Cert/Solution/pod_username.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-username
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
      volumeMounts:
        - name: secret-volume
          # mountPath: /usr/share/nginx/html
          mountPath: /etc/creds
          readOnly: true
  volumes:
  - name: secret-volume
    secret:
      secretName: db-creds
      items:
      - key: username
        path: username
