lesson3-k8s-Security&Cert/Solution/service-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-all
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: nginx
