lesson3-k8s-Security&Cert/Solution/service-db_url.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-db-url
spec:
  ports:
    - port: 8083
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: nginx
