lesson3-k8s-Security&Cert/Solution/service-password.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-password
spec:
  type: NodePort
  ports:
    - port: 8082
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: nginx
