lesson3-k8s-Security&Cert/Solution/service-username.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-username
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: nginx
